changed URL call to URI and handle URISyntaxException in SpigotWebAPI::Get()